--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "Super Mario Bros",
-	"short_name": "Super Mario Bros",
+	"name": "Super Mario Bros Unblocked",
+	"short_name": "Super Mario Bros Unblocked",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
